[project]
name = "uncensored"
version = "0.2.0"
description = "Scan a YouTube Music playlist and replace clean/edited songs with explicit versions"
requires-python = ">=3.9"
dependencies = [
    "ytmusicapi>=1.7.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
uncensored = "uncensored:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
